--- a/src/locales/ru-RU.yml
+++ b/src/locales/ru-RU.yml
@@ -4,7 +4,7 @@ mediaKeys:
 
 previousSeeking:
   title: "«Прошлый трек» перематывает в начало"
-  description: "Медиа-клавиша «прошлый трек» будет перематывать в начало, если трек играл менее двух секунд."
+  description: "Медиа-клавиша «прошлый трек» будет перематывать в начало, если трек играл более двух секунд."
 
 latestNext: 
   title: "Не отключать «следующий трек» в конце плейлиста"
