--- a/src/locales/en-GB.yml
+++ b/src/locales/en-GB.yml
@@ -23,7 +23,7 @@ notificationsDismiss:
 notificationsDismissTime:
   3s: "3 seconds after"
   5s: "5 seconds after"
-  Auto: "Automatically"
+  auto: "Automatically"
 
 toggleState:
   on: "On"
