--- a/src/locales/ru-RU.yml
+++ b/src/locales/ru-RU.yml
@@ -37,4 +37,6 @@ crackdown:
 
 installed: "Расширение интеграции с MSA установлено"
 
-updated: "Расширение интеграции с MSA обновилось"
+updated: 
+  body: "Расширение интеграции с MSA обновилось"
+  link: "Что нового?"
